@@ -19,6 +19,9 @@ Bug fixes
  5. LUCENE-1200: Fix rare deadlock case in addIndexes* when
     ConcurrentMergeScheduler is in use (Mike McCandless)
 
+ 6. LUCENE-1208: Fix deadlock case on hitting an exception while
+    processing a document that had triggered a flush (Mike McCandless)
+
 ======================= Release 2.3.1 2008-02-22 =======================
 
 Bug fixes
